--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "next-video": "^0.15.0",
+    "next-videos": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
